Fix all issues with xterm.js focusing and resizing

--- a/xtermjs/term.css
+++ b/xtermjs/term.css
@@ -20,6 +20,10 @@ html, body, #terminal {
     -webkit-tap-highlight-color: transparent;
 }
 
+.terminal textarea {
+    display: none;
+}
+
 .terminal .xterm-viewport {
     background: transparent;
 }
